--- a/overwolf/manifest.json
+++ b/overwolf/manifest.json
@@ -13,12 +13,30 @@
     "start_window": "background",
     "windows": {
       "background": {
-      "file": "background.js",
+        "file": "index.html",
         "transparent": true,
         "resizable": false,
         "show_in_taskbar": false,
         "allow_right_click": false
+      },
+      "control": {
+        "file": "ui.html",
+        "transparent": false,
+        "resizable": true,
+        "show_in_taskbar": true,
+        "size": { "width": 520, "height": 420 },
+        "start_position": { "top": 120, "left": 120 }
       }
+    }
+  },
+  "hotkeys": {
+    "toggle_control": {
+      "title": "Toggle Control Window",
+      "action": {
+        "type": "toggle",
+        "name": "control"
+      },
+      "default": "Ctrl+Shift+U"
     }
   },
   "permissions": [
